src/style.scss
@font-face {
  font-family: 'AkzidenzGrotesk';
  src: url('fonts/AkzidenzGrotesk/AkzidenzGrotesk-Bold1.eot'); /* IE9 Compat Modes */
  src: url('fonts/AkzidenzGrotesk/AkzidenzGrotesk-Bold1.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
  url('fonts/AkzidenzGrotesk/AkzidenzGrotesk-Bold1.woff') format('woff'), /* Modern Browsers */
  url('fonts/AkzidenzGrotesk/AkzidenzGrotesk-Bold1.ttf') format('truetype'), /* Safari, Android, iOS */
  url('fonts/AkzidenzGrotesk/AkzidenzGrotesk-Bold1.svg#AkzidenzGrotesk-Bold') format('svg'); /* Legacy iOS */
  font-style: normal;
  font-weight: bold;
  text-rendering: optimizeLegibility;
}

@font-face {
  font-family: 'Arnhem';
  src: url('fonts/Arnhem/Arnhem-Normal.eot'); /* IE9 Compat Modes */
  src: url('fonts/Arnhem/Arnhem-Normal.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
  url('fonts/Arnhem/Arnhem-Normal.woff') format('woff'), /* Modern Browsers */
  url('fonts/Arnhem/Arnhem-Normal.ttf') format('truetype'), /* Safari, Android, iOS */
  url('fonts/Arnhem/Arnhem-Normal.svg#Arnhem-Normal') format('svg'); /* Legacy iOS */
  font-style: normal;
  font-weight: normal;
  text-rendering: optimizeLegibility;
}

html {
  font-size: 130%;
}

body {
  font-family: 'AkzidenzGrotesk';
  margin: 0 auto;
  padding: 1rem 4%;
}

h2 {
  font-size: 1rem;
  text-decoration: underline;
}

a {
  color: #000;
  text-decoration: none;

  &:visited {
    color: #000;
  }
}

section {
  position: relative;
  margin-bottom: 10rem;

  p {
    display: inline-block;
    width: 40%;
    margin-right: 20%;
    line-height: 1.2rem;
  }
}

.main {
  opacity: 0;
  transition: opacity 200ms ease-in-out;

  &.is-shown {
    opacity: 1;
  }
}

nav {
  position: fixed;
  z-index: 1;
  top: 1rem;
  right: 4%;
  left: 4%;
  bottom: 0;

  .nav__left {
    display: inline-block;
    font-family: 'Arnhem';
    width: calc(100%/3);
    font-size: 1.1rem;

    a:hover {
      padding-bottom: 2px;
      border-bottom: 1.5px solid;
    }
  }

  .nav__center {
    display: inline-block;
    width: calc(100%/3);
    text-align: center;

    a:hover {
      padding-bottom: 2px;
      border-bottom: 1.5px solid;
    }
  }

  .nav__right {
    display: inline-block;
    width: calc(100%/3);
    text-align: right;

    a:hover {
      padding-bottom: 2px;
      border-bottom: 1.5px solid;
    }
  }

  .nav__bottom {
    position: absolute;
    font-family: 'Arnhem';
    text-align: center;
    right: 11%;
    bottom: 10%;

    .underline {
      padding-bottom: 2px;
      border-bottom: 1.5px solid;
    }

    .header {
      margin-bottom: 0.2rem;
    }

    .nav__bottom__row {
      display: block;
      margin-bottom: 1.5rem;
    }
  }
}

.landing {
  img {
    width: 65%;
    margin-top: 15vh;
    margin-left: 1%;
  }
}

.a-propos {
  img {
    width: 40%;
  }
}

.le-premier-numero {
  text-align: center;

  p {
    margin-right: 60%;
    text-align: left;
  }

  img {
    margin: 0 auto;
    width: 65%;
  }
}

.contacts {
  img {
    width: 30%;
    position: absolute;
    right: 0;
    bottom: 0;
  }
}

